Fixed: Front align problem in page 4

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -454,11 +454,13 @@ header {
 		&in3 {
 			letter-spacing: 28px;
 			padding-left: 15px !important;
+			padding-top: 2px;
 		}
 
 		&in4 {
 			letter-spacing: 32px;
 			padding-left: 16px !important;
+			padding-top: 2px;
 		}
 	}
 }
